@@ -10,6 +10,7 @@ Changes in version 3.2 M2 (2012-08-xx)
 * now inferring return type of generic factory methods (SPR-9493)
 * SpEL now supports method invocations on integers (SPR-9612)
 * SpEL now supports symbolic boolean operators for OR and AND (SPR-9614)
+* SpEL now supports nested double quotes in expressions (SPR-9620)
 * introduced support for case-insensitive null literals in SpEL expressions (SPR-9613)
 * now using BufferedInputStream in SimpleMetaDataReader to double performance (SPR-9528)
 * introduced "repeatCount" property in Quartz SimpleTriggerFactoryBean (SPR-9521)
